--- a/app/templates/admin_pages/dashboard.html
+++ b/app/templates/admin_pages/dashboard.html
@@ -4,6 +4,9 @@
 {% block css_block %}
 <link rel="stylesheet" href="{% static 'admin_styles/card.css' %}">
 {% endblock css_block %}
+{% block main_menu_link_class1 %}
+    class="active"
+{% endblock main_menu_link_class1 %}
 {% block main %}
 <div class="container">
     <h1>admin dashboard</h1>
