--- a/app/templates/admin_pages/utilisateurs_gestion.html
+++ b/app/templates/admin_pages/utilisateurs_gestion.html
@@ -1,8 +1,37 @@
 {% extends 'admin_pages/base.html' %}
 {% block title %} utilisateurs {% endblock title %}
+{% block main_menu_link_class4 %}
+    class="active"
+{% endblock main_menu_link_class4 %}
 {% block main %}
 <div class="container">
     <h1>administration utilisateurs</h1>
+
+    {% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+    {% endif %}
+    {% if messageEdit %}
+        <p style="color: green;">{{ messageEdit }}</p>
+    {% endif %}
+
+    {% if form_modif %}
+        <form action="{% url 'modif_utilisateur' utilisateur.id_utilisateur%}" method="POST">
+            {% csrf_token %}
+            {{ form_modif.as_p }}
+            <button type="submit">Enregistrer</button>
+        </form>
+
+
+    {% elif form_ajout %}
+        <form action="{% url 'ajout_utilisateur'%}" method="POST">
+            {% csrf_token %}
+            {{ form_ajout.as_p }}
+            <button type="submit">Enregistrer</button>
+        </form>
+    {% else %}
+        <a class="ajtBtn" href="{% url 'ajout_utilisateur'%}">ajouter</a>
+    {% endif %}
+
     <div>
         <table>
             <thead>
@@ -19,36 +48,14 @@
                     <td>{{utilisateur.id_utilisateur}} </td> 
                     <td>{{utilisateur.nom}} {{utilisateur.prenom}} </td> 
                     <td>{% if utilisateur.est_admin %} ADMIN {% else %} Utilisateur {% endif %} </td> 
-                    <td><button><a href="{% url 'supp_utilisateur' utilisateur.id_utilisateur%}">Supprimer</a></button><button><a href="{% url 'modif_utilisateur' utilisateur.id_utilisateur%}"> Modifier</a></button></td>
+                    <td class="actions">
+                        <a href="{% url 'supp_utilisateur' utilisateur.id_utilisateur%}"><i class="fa-solid fa-trash" style="margin-right: 5px;"></i>Supprimer</a>
+                        <a href="{% url 'modif_utilisateur' utilisateur.id_utilisateur%}"><i class="fa-solid fa-pen-to-square" style="margin-right: 5px;"></i>Modifier</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-{% if messageSupp %}
-    <p style="color: red;">{{ messageSupp }}</p>
-{% endif %}
-{% if messageEdit %}
-    <p style="color: green;">{{ messageEdit }}</p>
-{% endif %}
-
-{% if form_modif %}
-    <form action="{% url 'modif_utilisateur' utilisateur.id_utilisateur%}" method="POST">
-        {% csrf_token %}
-        {{ form_modif.as_p }}
-        <button type="submit">Enregistré</button>
-    </form>
-
-
-{% elif form_ajout %}
-    <form action="{% url 'ajout_utilisateur'%}" method="POST">
-        {% csrf_token %}
-        {{ form_ajout.as_p }}
-        <button type="submit">Enregistré</button>
-    </form>
-{% else %}
-<button type="submit"><a href="{% url 'ajout_utilisateur'%}">ajouter</a></button>
-{% endif %}
-    
 </div>
 {% endblock main %}
