--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -211,6 +211,9 @@
       <label for="prenom">Prénom:</label>
       <input type="text" name="prenom" required />
 
+      <label for="nom_utilisateur">Nom utilisateur:</label>
+      <input type="text" name="nom_utilisateur" required />
+
       <label for="email">Email:</label>
       <input type="email" name="email" required />
 
