--- a/app/templates/user/home.html
+++ b/app/templates/user/home.html
@@ -40,8 +40,25 @@
         body .container h1 {
             background-color: red;
         }
+        .inner1 .fa-bell {
+            color: #000; 
+            font-size: 1.5rem;
+        }
     </style>
 {% endblock block_css %}
+{% block bell_notif %}
+<i class="fa-solid fa-bell"><span></span></i>
+<div class="user-notifications">
+    <ul>
+        {% for notification in notifications %}
+            <li class="{{ notification.id_notification.type }}">
+                <span class="content">{{ notification.id_notification.content}}</span>
+                <span class="temp">{{ notification.id_notification.date_notif }} {{ notification.id_notification.heure_d_notif}}</span>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock bell_notif %}
 {% block menu_per_log_case %}
     {% if request.session.code_session %}
         <div class="log" id="LogMenuButton">
