--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -29,16 +29,15 @@ td {
     text-align: center;
 }
 
-.actions {
-    height: 50px;
-    padding: 10px;
-}
-
 .actions a {
+    display: inline-block;
+    margin: 5px;
     padding: 5px 10px;
     border-radius: 10px;
     text-decoration: none;
     cursor: pointer;
+    font-size: .8rem;
+    font-weight: 600;
     color: white;
     outline: none;
     border: none;
@@ -46,20 +45,19 @@ td {
 }
 
 .actions a:first-child {
-    background-color: rgba(255, 0, 0, 0.704);
-
-}
-
-.actions a:first-child:hover {
     background-color: rgb(255, 0, 0);
 }
 
+.actions a:first-child:hover {
+    background-color: rgba(255, 0, 0, 0.704);
+}
+
 .actions a:nth-child(2) {
-    background-color: rgba(8, 237, 35, 0.807);
+    background-color: rgb(8, 237, 35);
 }
 
 .actions a:nth-child(2):hover {
-    background-color: rgb(8, 237, 35);
+    background-color: rgba(8, 237, 35, 0.731);
 }
 
 .container-menu {
@@ -70,27 +68,49 @@ td {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-left: 270px;
+    margin-left: 250px;
 }
 
 .inner-container .secondary-menu {
-    width: 100%;
+    width: 83%;
     height: auto;
-    z-index: 999;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    border-bottom: 1px solid #777;
     gap: 20px;
     padding: 10px 20px;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    background-color: #fff;
+}
+
+.inner-container .secondary-menu .logoutBtn {
+    background: transparent; 
+    outline: none; 
+    border: none; 
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 1rem;
+    transition: all .3s;
+}
+
+.inner-container .secondary-menu .logoutBtn:hover {
+    background-color: var(--main-background);
+    color: #000; 
+}
+
+.inner-container .secondary-menu .logoutBtn i {
+    margin-right: 5px;
 }
 
 .container {
-    padding: 20px;
+    padding: 100px 20px;
     background-color: var(--full-background);
     min-height: 100vh;
 }
-
-
 
 /* admin main menu styles */
 .container-menu .main-menu {
@@ -100,8 +120,10 @@ td {
     align-items: center;
     justify-content: center;
     padding: 10px 0;
-    width: 270px;
+    width: 250px;
     background-color: rgb(255, 255, 255);
+    overflow: auto;
+    border-right: 1px solid #777;
 }
 
 .main-menu .logo {
@@ -126,7 +148,6 @@ td {
     right: 0;
 }
 
-
 .main-menu ul {
     width: 100%;
     display: flex;
@@ -147,6 +168,11 @@ td {
     background-color: var(--back-after);
 }
 
+.main-menu ul li .active {
+    background-color: var(--back-after);
+    color: var(--color-after);
+}
+
 .main-menu ul li:hover a {
     color: var(--color-after);
 }
@@ -154,30 +180,80 @@ td {
 .main-menu ul li a {
     display: inline-block;
     text-decoration: none;
+    padding: 16px 15px;
     cursor: pointer;
     color: rgb(117, 117, 137);
     font-size: 1rem;
     font-weight: 600;
     width: 100%;
-    height: 70px;
+    height: 60px;
     vertical-align: center;
 }
 
 .main-menu ul li a i {
     display: inline-block;
-    margin-inline: 10px;
+    margin-right: 10px;
 }
 
-/* admin secondary menu styles */
-.secondary-menu {
-    width: 100%;
-    padding: 5px 10px;
+/* form tyling */
+
+form:not(.logout) {
     display: flex;
-    justify-content: flex-end;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin: 40px auto;
+    gap: 20px;
 }
 
-/* form input[type='text'] {
-    border: 1px solid red;
+form:not(.logout) label {
+    font-weight: bold;
+    color: #777;
+}
+
+form:not(.logout) input {
+    border: 1px solid #77777796;
+    border-radius: 10px; 
+    margin-left: 15px;
+    padding: 5px 10px;    
     outline: none;
-} */
+}
+
+form:not(.logout) button[type="submit"] {
+    border: none;
+    border-radius: 10px;     
+    background-color: #fff;
+    color: #000;
+    outline: none;
+    padding: 8px 10px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all .3s;
+}
+
+form:not(.logout) button[type="submit"]:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.ajtBtn {
+    border: none;
+    border-radius: 10px;     
+    background-color: #fff;
+    color: #000;
+    outline: none;
+    display: inline-block;
+    margin: 20px 0;
+    font-size: .8rem;
+    padding: 8px 10px;
+    cursor: pointer;
+    font-weight: 600;
+    text-decoration: none;
+    transition: all .3s;
+}
+
+.ajtBtn:hover {
+    background-color: #000;
+    color: #fff;
+}
