--- a/app/templates/admin_pages/hotels_gestion.html
+++ b/app/templates/admin_pages/hotels_gestion.html
@@ -1,8 +1,34 @@
 {% extends 'admin_pages/base.html' %}
 {% block title %} Hotels {% endblock title %}
+{% block main_menu_link_class3 %}
+    class="active"
+{% endblock main_menu_link_class3 %}
 {% block main %}
 <div class="container">
     <h1>administration hotels</h1>
+    {% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+    {% endif %}
+    {% if messageEdit %}
+        <p style="color: green;">{{ messageEdit }}</p>
+    {% endif %}
+
+    {% if form_modif %}
+        <form action="{% url 'modif_hotel' hotel.id_hotel%}" method="POST">
+            {% csrf_token %}
+            {{ form_modif.as_p }}
+            <button type="submit">Enregistrer</button>
+        </form>
+
+    {% elif form_ajout %}
+    <form action="{% url 'ajout_hotel'%}" method="POST">
+        {% csrf_token %}
+        {{ form_ajout.as_p }}
+        <button type="submit">Enregistrer</button>
+    </form>
+    {% else %}
+        <a class="ajtBtn" href="{% url 'ajout_hotel'%}">ajouter</a>
+    {% endif %}
     <div>
         <table>
             <thead>
@@ -25,37 +51,15 @@
                     <td>{{hotel.type_chambre}} </td> 
                     <td>{{hotel.n_chambreDispo}} </td> 
                     <td>{{hotel.petit_dejeuner}} </td> 
-                    <td>
-                        <a href="{% url 'supp_hotel' hotel.id_hotel%}">Supprimer</a>
-                        <a href="{% url 'modif_hotel' hotel.id_hotel%}"> Modifier</a>
+                    <td class="actions">
+                        <a href="{% url 'supp_hotel' hotel.id_hotel%}"><i class="fa-solid fa-trash" style="margin-right: 5px;"></i>Supprimer</a>
+                        <a href="{% url 'modif_hotel' hotel.id_hotel%}"><i class="fa-solid fa-pen-to-square" style="margin-right: 5px;"></i>Modifier</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-{% if messageSupp %}
-    <p style="color: red;">{{ messageSupp }}</p>
-{% endif %}
-{% if messageEdit %}
-    <p style="color: green;">{{ messageEdit }}</p>
-{% endif %}
 
-{% if form_modif %}
-    <form action="{% url 'modif_hotel' hotel.id_hotel%}" method="POST">
-        {% csrf_token %}
-        {{ form_modif.as_p }}
-        <button type="submit">Enregistré</button>
-    </form>
-
-{% elif form_ajout %}
-<form action="{% url 'ajout_hotel'%}" method="POST">
-    {% csrf_token %}
-    {{ form_ajout.as_p }}
-    <button type="submit">Enregistré</button>
-</form>
-{% else %}
-    <button type="submit"><a href="{% url 'ajout_hotel'%}">ajouter</a></button>
-{% endif %}
 </div>
 {% endblock main %}
