--- a/app/templates/admin_pages/promotions_gestion.html
+++ b/app/templates/admin_pages/promotions_gestion.html
@@ -1,8 +1,36 @@
 {% extends 'admin_pages/base.html' %}
 {% block title %} Promos {% endblock title %}
+{% block main_menu_link_class5 %}
+    class="active"
+{% endblock main_menu_link_class5 %}
 {% block main %}
 <div class="container">
     <h1>administration promotions</h1>
+
+    {% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+    {% endif %}
+    {% if messageEdit %}
+        <p style="color: green;">{{ messageEdit }}</p>
+    {% endif %}
+
+    {% if form_modif %}
+        <form action="{% url 'modif_promotion' promotion.id_promotion%}" method="POST">
+            {% csrf_token %}
+            {{ form_modif.as_p }}
+            <button type="submit">Enregistrer</button>
+        </form>
+    
+    {% elif form_ajout %}
+    <form action="{% url 'ajout_promotion'%}" method="POST">
+        {% csrf_token %}
+        {{ form_ajout.as_p }}
+        <button type="submit">Enregistrer</button>
+    </form>
+    {% else %}
+        <a class="ajtBtn" href="{% url 'ajout_promotion'%}">ajouter</a>
+    {% endif %}
+
     <div>
         <table>
             <thead>
@@ -22,8 +50,8 @@
                     <td>{{promotion.date_f_promo}}, {{promotion.heure_f_promos}}</td> 
                     <td>{{promotion.pourcentage}} </td> 
                     <td class="actions">
-                        <a href="{% url 'supp_promotion' promotion.id_promotion%}">Supprimer</a>
-                        <a href="{% url 'modif_promotion' promotion.id_promotion%}"> Modifier</a>
+                        <a href="{% url 'supp_promotion' promotion.id_promotion%}"><i class="fa-solid fa-trash" style="margin-right: 5px;"></i>Supprimer</a>
+                        <a href="{% url 'modif_promotion' promotion.id_promotion%}"><i class="fa-solid fa-pen-to-square" style="margin-right: 5px;"></i>Modifier</a>
                     </td>
 
                 </tr>
@@ -32,29 +60,6 @@
             </tbody>
         </table>
     </div>
-   
-{% if messageSupp %}
-    <p style="color: red;">{{ messageSupp }}</p>
-{% endif %}
-{% if messageEdit %}
-    <p style="color: green;">{{ messageEdit }}</p>
-{% endif %}
 
-{% if form_modif %}
-    <form action="{% url 'modif_promotion' promotion.id_promotion%}" method="POST">
-        {% csrf_token %}
-        {{ form_modif.as_p }}
-        <button type="submit">Enregistré</button>
-    </form>
-  
-{% elif form_ajout %}
-<form action="{% url 'ajout_promotion'%}" method="POST">
-    {% csrf_token %}
-    {{ form_ajout.as_p }}
-    <button type="submit">Enregistré</button>
-</form>
-{% else %}
-    <button type="submit"><a href="{% url 'ajout_promotion'%}">ajouter</a></button>
-{% endif %}
 </div>
 {% endblock main %}
