--- a/app/templates/user/hotels_details.html
+++ b/app/templates/user/hotels_details.html
@@ -6,7 +6,14 @@ endblock url_8_class %} {% block title %} voyage organise details - {{ id_voyage
   .container {
     background-color: rgb(255, 255, 255);
   }
+  .inner1 .fa-bell {
+      color: #000; 
+      font-size: 1.5rem;
+  }
 </style>
+{% block bell_notif %}
+<i class="fa-solid fa-bell"><span></span></i>
+{% endblock bell_notif %}
 {% endblock block_css %}
 {% block menu_per_log_case %}
     {% if request.session.code_session %}
