--- a/app/templates/user/special_omra.html
+++ b/app/templates/user/special_omra.html
@@ -10,6 +10,9 @@
     }
 </style>
 {% endblock block_css %}
+{% block bell_notif %}
+<i class="fa-solid fa-bell"><span></span></i>
+{% endblock bell_notif %}
 {% block menu_per_log_case %}
     {% if request.session.code_session %}
         <div class="log" id="LogMenuButton">
