--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -74,6 +74,9 @@
                 <li>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </li>
+                <li>
+                <a href="{% url 'home' %}"><i class="fa-solid fa-reply"></i></a>
+                </li>
             </ul>
             <button>Mise a jour les informations</button>
         </div>
