--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -113,10 +113,11 @@ header .inner1 .search {
 }
 
 .inner1 .fa-bell {
-    color: var(--main-gray); 
+    color: var(--main-gray);
     font-size: 1.5rem;
     cursor: pointer;
-    position: relative;
+    position: absolute;
+    right: 20%;
 }
 
 .inner1 .fa-bell span {
@@ -212,9 +213,8 @@ header .inner1 .menu ul li:nth-child(2) {
     border-bottom: 1px solid rgb(148, 147, 147);
     width: 100%;
     padding-bottom: 14px;
-    margin-bottom: 2px;
+    /* margin-bottom: 2px; */
 }
-
 
 header .inner2 {
     display: flex;
@@ -353,6 +353,23 @@ body .container {
     width: 100%;
 }
 
+/* @keyframes myAnimation {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(-15px);
+        background-color: rgba(100, 100, 100, 0.2);
+        color: #fff;
+        scale: 1.1;
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+} */
+
 .first .services-cards .card {
     background-color: var(--main-background-card);
     display: flex;
@@ -366,12 +383,32 @@ body .container {
     box-shadow: var(--secondary-shadow-hovered);
     backdrop-filter: blur(20px);
     cursor: pointer;
-    transition: all .2s ease;
+    /* animation: myAnimation 2s infinite; */
+    transition: .2s ease;
 }
+
+/* .first .services-cards .card:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.first .services-cards .card:nth-child(2) {
+    animation-delay: 2s;
+}
+
+.first .services-cards .card:nth-child(3) {
+    animation-delay: 4s;
+}
+
+.first .services-cards .card:nth-child(4) {
+    animation-delay: 8s;
+}
+ */
+
 
 .first .services-cards .card:hover {
     background-color: rgba(100, 100, 100, 0.2);
     color: #fff;
+    scale: 1.1;
     transform: translateY(-15px);
 }
 
@@ -398,8 +435,7 @@ body .container {
 }
 
 .second {
-    padding: 100px;
-    margin-top: 100px;
+    padding: 200px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
