--- a/app/templates/admin_pages/voyages_gestion.html
+++ b/app/templates/admin_pages/voyages_gestion.html
@@ -25,9 +25,15 @@
         <form action="{% url 'ajout_voyage'%}" method="POST">
             {% csrf_token %}
             {{ form_ajout.as_p }}
+            <label for="villes">Selectionner la ville:
+                <select name="ville" id="villes">
+                    {% for ville in villes %}
+                    <option value="{{ ville.id_ville }}">{{ ville }}</option>
+                    {% endfor %}
+                </select>
+            </label>
             <button type="submit">Enregistrer</button>
         </form>
-
     {% else %}
         <a class="ajtBtn" href="{% url 'ajout_voyage'%}">ajouter</a>   
     
