--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -200,20 +200,47 @@ td {
 
 form:not(.logout) {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    width: 80%;
+    width: fit-content;
     margin: 40px auto;
     gap: 20px;
 }
 
 form:not(.logout) label {
+    display: inline-block;
+    width: 300px;
     font-weight: bold;
     color: #777;
 }
 
 form:not(.logout) input {
+    border: 1px solid #77777796;
+    border-radius: 10px;
+    margin-left: 15px;
+    padding: 5px 10px;
+    outline: none;
+}
+
+form:not(.logout) input[type="file"]::file-selector-button {
+    margin-right: 8px;
+    border: none;
+    display: inline-block;
+    background: #000;
+    border-radius: 10px;
+    padding: 8px 12px;
+    color: #fff;
+    cursor: pointer;
+}
+
+input[type="file"]:focus {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+form:not(.logout) select {
     border: 1px solid #77777796;
     border-radius: 10px;
     margin-left: 15px;
