--- a/app/templates/admin_pages/villes_gestion.html
+++ b/app/templates/admin_pages/villes_gestion.html
@@ -22,10 +22,13 @@
         </form>
     
     {% elif form_ajout %}
-    <form action="{% url 'ajout_ville'%}" method="POST">
+    <form action="{% url 'ajout_ville'%}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form_ajout.as_p }}
-        <button type="submit">Enregistré</button>
+        <label for="path_image" class="custom-file-label">Selectionner des images:
+            <input type="file" name="path_image" multiple accept="image/*" />
+        </label>
+        <button type="submit">Enregistrer</button>
     </form>
     {% else %}
         <a class="ajtBtn" href="{% url 'ajout_ville'%}">ajouter</a>
