--- a/app/templates/admin_pages/hotels_gestion.html
+++ b/app/templates/admin_pages/hotels_gestion.html
@@ -24,7 +24,7 @@
     <form action="{% url 'ajout_hotel' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form_ajout.as_p }}
-    <label for="path_image" class="custom-file-label">Image de profil:
+    <label for="path_image" class="custom-file-label">Images du Hotel:
         <input type="file" name="path_image" multiple accept="image/*" />
     </label>
     <button type="submit">Enregistrer</button>
